Enable all plugins in cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,12 +98,12 @@ if(MSVC)
 	target_link_libraries(open-ephys setupapi.lib opengl32.lib glu32.lib)
 	set_property(TARGET open-ephys APPEND_STRING PROPERTY LINK_FLAGS "/NODEFAULTLIB:\"libcmt.lib\" /NODEFAULTLIB:\"msvcrt.lib\" /SUBSYSTEM:WINDOWS")
 	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-		set(DLLDIR "Win64")
+		set(DLLARCH "Win64")
 	else()
-		set(DLLDIR "Win32")
+		set(DLLARCH "Win32")
 	endif()
-	set(_copysrc "${RESOURCES_DIRECTORY}/DLLs/${DLLDIR}/*.dll" )
-	file(GLOB _dllfiles ${_copysrc})
+	set(DLLDIR ${RESOURCES_DIRECTORY}/DLLs/${DLLARCH})
+	file(GLOB _dllfiles "${DLLDIR}/*.dll")
 	add_custom_command(TARGET open-ephys POST_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy ${_dllfiles} ${BIN_SHARED_DIR}
 		)
