--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,8 @@ elseif(LINUX)
 	target_compile_options(open-ephys PRIVATE -O3) #enable optimization for linux debug
 	set_property(TARGET open-ephys PROPERTY RUNTIME_OUTPUT_DIRECTORY ${BASE_BUILD_DIRECTORY}/${CMAKE_BUILD_TYPE})
 
-	set(_copysrc "${RESOURCES_DIRECTORY}/DLLs/Linux/*.so" )
-	file(GLOB _dllfiles ${_copysrc})
+	set(DLLDIR ${RESOURCES_DIRECTORY}/DLLs/Linux)
+	file(GLOB _dllfiles "${DLLDIR}/*.so")
 	add_custom_command(TARGET open-ephys POST_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy ${_dllfiles} ${BIN_SHARED_DIR}
 		)
@@ -164,6 +164,8 @@ elseif(APPLE)
 		"-framework QuartzCore"
 		"-framework WebKit"
 	)
+	
+	set(DLLDIR ${RESOURCES_DIRECTORY}/DLLs/Mac)
 
 	set_target_properties(open-ephys PROPERTIES
 		XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT dwarf
