--- a/Plugins/IntanRecordingController/CMakeLists.txt
+++ b/Plugins/IntanRecordingController/CMakeLists.txt
@@ -20,12 +20,16 @@ add_sources(${PLUGIN_NAME}
 	USBThread.cpp
 	USBThread.h
 	)
-	
+
 if (MSVC)
 	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/okFrontPanel.lib")
 elseif(LINUX)
 	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/libokFrontPanel.so")
+elseif(APPLE)
+	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/libokFrontPanel.dylib")
+	set_source_files_properties(${DLLDIR}/libokFrontPanel.dylib PROPERTIES MACOSX_PACKAGE_LOCATION Frameworks)
+	target_sources(${PLUGIN_NAME} PRIVATE ${DLLDIR}/libokFrontPanel.dylib)
 endif()
-	
+
 #optional: create IDE groups
 plugin_create_filters()
