--- a/Plugins/RhythmNode/CMakeLists.txt
+++ b/Plugins/RhythmNode/CMakeLists.txt
@@ -19,12 +19,16 @@ add_sources(${PLUGIN_NAME}
 	RHD2000Editor.h
 
 	)
-	
+
 if (MSVC)
 	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/okFrontPanel.lib")
 elseif(LINUX)
 	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/libokFrontPanel.so")
+elseif(APPLE)
+	target_link_libraries(${PLUGIN_NAME} "${DLLDIR}/libokFrontPanel.dylib")
+	set_source_files_properties(${DLLDIR}/libokFrontPanel.dylib PROPERTIES MACOSX_PACKAGE_LOCATION Frameworks)
+	target_sources(${PLUGIN_NAME} PRIVATE ${DLLDIR}/libokFrontPanel.dylib)
 endif()
-	
+
 #optional: create IDE groups
 plugin_create_filters()
