Ignore installed commonlib folder

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ Builds/**/build/
 JuceLibraryCode/JuceHeader.h
 Resources/Build-files/resources.rc
 Resources/Build-files/Info-App.plist
+
+#12. installed commonlibs
+installed_libs
