Fix BinaryBuilder build on Linux

--- a/Resources/DeveloperTools/BinaryBuilder/CMakeLists.txt
+++ b/Resources/DeveloperTools/BinaryBuilder/CMakeLists.txt
@@ -43,8 +43,10 @@ if(MSVC)
 	set_property(TARGET BinaryBuilder APPEND_STRING PROPERTY LINK_FLAGS_DEBUG " /NODEFAULTLIB:\"libcmt.lib\" /NODEFAULTLIB:\"msvcrt.lib\"")
 	set_property(TARGET BinaryBuilder APPEND_STRING PROPERTY LINK_FLAGS " /SUBSYSTEM:CONSOLE")
 elseif(LINUX)
+	find_package(CURL REQUIRED)
 	target_compile_options(BinaryBuilder PRIVATE -pthread)
-	target_link_libraries(BinaryBuilder dl pthread)
+	target_link_libraries(BinaryBuilder dl pthread ${CURL_LIBRARIES})
+	target_include_directories(BinaryBuilder PRIVATE ${CURL_INCLIDE_DIR})
 elseif(APPLE)
 	target_link_libraries(dl)
 	target_link_libraries(open-ephys
