cmake config working

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -20,7 +20,10 @@ add_subdirectory(FilterNode)
 add_subdirectory(IntanRecordingController)
 add_subdirectory(LfpDisplayNode)
 add_subdirectory(LfpDisplayNodeBeta)
+add_subdirectory(Neuropix3aPlugin)
 add_subdirectory(PhaseDetector)
+add_subdirectory(PosTracker)
+add_subdirectory(probe-viewer)
 add_subdirectory(PulsePalOutput)
 add_subdirectory(RecordControl)
 add_subdirectory(Rectifier)
