--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(IntanRecordingController)
 add_subdirectory(LfpDisplayNode)
 add_subdirectory(LfpDisplayNodeBeta)
 add_subdirectory(Neuropix3aPlugin)
+add_subdirectory(neuropixels-pxi)
 add_subdirectory(PhaseDetector)
 add_subdirectory(PosTracker)
 add_subdirectory(probe-viewer)
