--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,8 @@ elseif(APPLE)
 	set(DLLDIR ${RESOURCES_DIRECTORY}/DLLs/Mac)
 
 	set_target_properties(open-ephys PROPERTIES
+		XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ""
+		XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED NO
 		XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT dwarf
 		XCODE_ATTRIBUTE_GCC_INLINES_ARE_PRIVATE_EXTERN YES
 		XCODE_ATTRIBUTE_CLANG_LINK_OBJC_RUNTIME NO
