Add new Record Node to Plugins

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(LfpDisplayNodeBeta)
 add_subdirectory(PhaseDetector)
 add_subdirectory(PulsePalOutput)
 add_subdirectory(RecordControl)
+add_subdirectory(RecordNode)
 add_subdirectory(Rectifier)
 add_subdirectory(RhythmNode)
 add_subdirectory(SerialInput)
