Only run builds when source folders are modified

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,6 +1,12 @@
 name: Linux
 
-on: [push]
+on:
+  push:
+    paths:
+    - "Source"
+    - "JuceLibraryCode"
+    - "PluginGenerator"
+    - "Plugins"
 
 jobs:
   build-ubuntu:
