--- a/Source/Processors/RecordNode/CMakeLists.txt
+++ b/Source/Processors/RecordNode/CMakeLists.txt
@@ -18,6 +18,8 @@ add_sources(open-ephys
 	RecordNodeEditor.h
 	RecordThread.cpp
 	RecordThread.h
+	SyncChannelSelector.cpp
+	SyncChannelSelector.h
 	Synchronizer.cpp
 	Synchronizer.h
 	Utils.h
