--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -3,6 +3,7 @@ name: Linux
 on:
   push:
     paths:
+    - ".github"
     - "CMakeLists.txt"
     - "Source"
     - "JuceLibraryCode"
@@ -38,6 +39,7 @@ jobs:
         cd Build
         cp -r Release open-ephys
         cp -r ../Resources/DataFiles open-ephys
+        cp -r ../Licenses open-ephys
         zipfile=open-ephys-${gui_ver}-linux-beta.zip
         zip -r $zipfile open-ephys
         user_info="$bintrayUser:$bintrayApiKey"
@@ -54,6 +56,7 @@ jobs:
         cd Build
         cp -r Release open-ephys
         cp -r ../Resources/DataFiles open-ephys
+        cp -r ../Licesnes open-ephys
         zipfile=open-ephys-${gui_ver}-linux.zip
         zip -r $zipfile open-ephys
         user_info="$bintrayUser:$bintrayApiKey"
