--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -3,6 +3,7 @@ name: Windows
 on:
   push:
     paths:
+    - ".github"
     - "CMakeLists.txt"
     - "Source"
     - "JuceLibraryCode"
@@ -39,7 +40,9 @@ jobs:
       run: |
         cd Build
         mv Release open-ephys
+        cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
         cp -r ../Resources/DataFiles open-ephys
+        cp -r ../Licenses open-ephys
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         zipfile=open-ephys-${gui_ver}-windows-beta.zip
         powershell Compress-Archive -Path "open-ephys" -DestinationPath ${zipfile}
@@ -55,7 +58,9 @@ jobs:
       run: |
         cd Build
         mv Release open-ephys
+        cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
         cp -r ../Resources/DataFiles open-ephys
+        cp -r ../Licenses open-ephys
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         zipfile=open-ephys-${gui_ver}-windows.zip
         powershell Compress-Archive -Path "open-ephys" -DestinationPath ${zipfile}
