--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,8 +34,7 @@ jobs:
     - name: deploy_test
       if: github.ref == 'refs/heads/testing'
       env:
-        bintrayUser: ${{ secrets.bintrayUsername }}
-        bintrayApiKey: ${{ secrets.bintrayApiKey }}
+        artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
       run: |
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         cd Build
@@ -44,9 +43,8 @@ jobs:
         cp ../LICENSE open-ephys
         zipfile=open-ephys-${gui_ver}-linux-beta.zip
         zip -r $zipfile open-ephys
-        user_info="$bintrayUser:$bintrayApiKey"
-        curl -T $zipfile --user $user_info https://api.bintray.com/content/open-ephys-gui/Test/Test-linux/$gui_ver/$zipfile
-        curl -X POST --user $user_info https://api.bintray.com/content/open-ephys-gui/Test/Test-linux/$gui_ver/publish
+        user_info="X-JFrog-Art-Api:$artifactoryApiKey"
+        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Test/linux/$zipfile"
         cd ../Resources/Installers/Linux/Open-Ephys_Installer
         mkdir -p usr/local/bin/open-ephys-gui
         cp -r ../../../../Build/Release/* usr/local/bin/open-ephys-gui
@@ -55,14 +53,12 @@ jobs:
         dpkg-deb --build Open-Ephys_Installer
         installer=open-ephys-gui-${gui_ver}-beta.deb
         mv -v Open-Ephys_Installer.deb $installer
-        curl -T $installer --user $user_info https://api.bintray.com/content/open-ephys-gui/Test-Installer/Test-Installer-linux/$gui_ver/$installer
-        curl -X POST --user $user_info https://api.bintray.com/content/open-ephys-gui/Test-Installer/Test-Installer-linux/$gui_ver/publish
+        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Test-Installer/linux/$installer"
       shell: bash
     - name: deploy_release
       if: github.ref == 'refs/heads/master'
       env:
-        bintrayUser: ${{ secrets.bintrayUsername }}
-        bintrayApiKey: ${{ secrets.bintrayApiKey }}
+        artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
       run: |
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         cd Build
@@ -71,9 +67,8 @@ jobs:
         cp ../LICENSE open-ephys
         zipfile=open-ephys-${gui_ver}-linux.zip
         zip -r $zipfile open-ephys
-        user_info="$bintrayUser:$bintrayApiKey"
-        curl -T $zipfile --user $user_info https://api.bintray.com/content/open-ephys-gui/Release/Release-linux/$gui_ver/$zipfile
-        curl -X POST --user $user_info https://api.bintray.com/content/open-ephys-gui/Release/Release-linux/$gui_ver/publish
+        user_info="X-JFrog-Art-Api:$artifactoryApiKey"
+        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Release/linux/$zipfile"
         cd ../Resources/Installers/Linux/Open-Ephys_Installer
         mkdir -p usr/local/bin/open-ephys-gui
         cp -r ../../../../Build/Release/* usr/local/bin/open-ephys-gui
@@ -82,6 +77,5 @@ jobs:
         dpkg-deb --build Open-Ephys_Installer
         installer=open-ephys-gui-${gui_ver}.deb
         mv Open-Ephys_Installer.deb $installer
-        curl -T $installer --user $user_info https://api.bintray.com/content/open-ephys-gui/Release-Installer/Release-Installer-linux/$gui_ver/$installer
-        curl -X POST --user $user_info https://api.bintray.com/content/open-ephys-gui/Release-Installer/Release-Installer-linux/$gui_ver/publish
+        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Release-Installer/linux/$installer"
       shell: bash
