Remove AudioResamplingNode (unused)

--- a/Source/Processors/CMakeLists.txt
+++ b/Source/Processors/CMakeLists.txt
@@ -5,8 +5,6 @@
 
 #add nested directories
 add_subdirectory(AudioNode)
-add_subdirectory(AudioResamplingNode)
-add_subdirectory(Channel)
 add_subdirectory(DataThreads)
 add_subdirectory(Dsp)
 add_subdirectory(Editors)
@@ -22,6 +20,7 @@ add_subdirectory(ProcessorGraph)
 add_subdirectory(ProcessorManager)
 add_subdirectory(RecordNode)
 add_subdirectory(Serial)
+add_subdirectory(Settings)
 add_subdirectory(SourceNode)
 add_subdirectory(Splitter)
 add_subdirectory(Visualization)
