Remove some default plugins

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -13,16 +13,10 @@ set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
 #add plugin subdirectories
 add_subdirectory(ArduinoOutput)
 add_subdirectory(BasicSpikeDisplay)
-add_subdirectory(CAR)
+add_subdirectory(CommonAverageRef)
 add_subdirectory(ChannelMappingNode)
-add_subdirectory(EvntTrigAvg)
 add_subdirectory(FilterNode)
-add_subdirectory(IntanRecordingController)
 add_subdirectory(LfpDisplayNode)
 add_subdirectory(PhaseDetector)
-add_subdirectory(PulsePalOutput)
 add_subdirectory(RecordControl)
-add_subdirectory(Rectifier)
-add_subdirectory(RhythmNode)
-add_subdirectory(SerialInput)
 add_subdirectory(SpikeSorter)
