Add PopupChannelSelector support in plugin API

--- a/Source/Processors/Editors/CMakeLists.txt
+++ b/Source/Processors/Editors/CMakeLists.txt
@@ -16,6 +16,8 @@ add_sources(open-ephys
 	TTLMonitor.h
 	StreamSelectorButton.cpp
 	StreamSelectorButton.h
+	PopupChannelSelector.cpp
+	PopupChannelSelector.h
 )
 
 #add nested directories
