Add SpikeDetector configuration window [WIP]

--- a/Plugins/BasicSpikeDisplay/CMakeLists.txt
+++ b/Plugins/BasicSpikeDisplay/CMakeLists.txt
@@ -10,6 +10,8 @@ add_sources(${PLUGIN_NAME}
 	SpikeDetector/SpikeDetector.h
 	SpikeDetector/SpikeDetectorEditor.cpp
 	SpikeDetector/SpikeDetectorEditor.h
+	SpikeDetector/PopupConfigurationWindow.cpp
+	SpikeDetector/PopupConfigurationWindow.h
 	SpikeDisplayNode/SpikeDisplayCanvas.cpp
 	SpikeDisplayNode/SpikeDisplayCanvas.h
 	SpikeDisplayNode/SpikeDisplayEditor.cpp
