Update ChannelMappingNode for new stream architecture [WIP]

--- a/Plugins/ChannelMappingNode/CMakeLists.txt
+++ b/Plugins/ChannelMappingNode/CMakeLists.txt
@@ -10,6 +10,7 @@ add_sources(${PLUGIN_NAME}
 	ChannelMappingNode.h
 	ChannelMappingEditor.cpp
 	ChannelMappingEditor.h
+	PrbFormat.h
 	)
 	
 #optional: create IDE groups
