Add ParameterCollection files to CMakeLists.txt

--- a/Source/Processors/Parameter/CMakeLists.txt
+++ b/Source/Processors/Parameter/CMakeLists.txt
@@ -4,6 +4,8 @@
 add_sources(open-ephys 
 	Parameter.cpp
 	Parameter.h
+	ParameterCollection.cpp
+	ParameterCollection.h
 	ParameterEditor.cpp
 	ParameterEditor.h
 )
