--- a/Source/UI/CMakeLists.txt
+++ b/Source/UI/CMakeLists.txt
@@ -14,6 +14,8 @@ add_sources(open-ephys
 	EditorViewportActions.h
 	EditorViewportButtons.cpp
 	EditorViewportButtons.h
+	FilenameConfigWindow.cpp
+	FilenameConfigWindow.h
 	GraphViewer.cpp
 	GraphViewer.h
 	InfoLabel.cpp
