Migrate HttpServer to MainWindow

--- a/Source/Utils/CMakeLists.txt
+++ b/Source/Utils/CMakeLists.txt
@@ -2,9 +2,10 @@
 
 #add files in this folder
 add_sources(open-ephys 
-	Utils.h
+	OpenEphysHttpServer.h
 	ListSliceParser.h
 	ListSliceParser.cpp
+	Utils.h
 )
 
 #add nested directories
